src/objects/Post_Install_Customer__c.object
<CustomObject>
    <description>Tab for tracking and managing progress of post-install customers</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>$Organization.State  &amp; &quot;, &quot; &amp; $Organization.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_for__c</fullName>
        <label>Candidate for Interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Story_Thank_You_Sent__c</fullName>
        <label>Customer Story Thank You Sent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_Scores__c</fullName>
        <label>Customer Survey Scores</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Interview_Completed__c</fullName>
        <label>Date Interview Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Interview_Finished_Approved__c</fullName>
        <label>Date Interview Finished/Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Interview_Scheduled__c</fullName>
        <label>Date Interview Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Photo_Shoot_Completed__c</fullName>
        <label>Date Photo Shoot Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Photo_Shoot_Scheduled__c</fullName>
        <label>Date Photo Shoot Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Second_Survey_Reminder_Sent__c</fullName>
        <label>Date Second Survey Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Sent__c</fullName>
        <label>Date Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Used__c</fullName>
        <label>Financing Used</label>
        <picklist>
            <picklistValues>
                <fullName>AFC First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficial Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnTility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Post-Install Customers</relationshipLabel>
        <relationshipName>Post_Install_Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <label>Project Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Aaron Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abby Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Cleland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Ganske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Corsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Marx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Wateski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lila Holzman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike McKinley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noah Jacobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Marklund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Spears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Rust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vlad Verschinin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Credit_Approved__c</fullName>
        <label>Property Tax Credit Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Credit_Submitted__c</fullName>
        <label>Property Tax Credit Submitted:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RatingofInstall__c</fullName>
        <label>Rating of Installation</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Major Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Minor Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - No Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - No Issues, Some Praise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Model Installation, Lots of Praise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Preference__c</fullName>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Has not been asked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to be a reference after being asked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Reference - Use a less than average amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Reference - Use an average amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3 Reference - Can be used more than average</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals_Given__c</fullName>
        <label>Referrals Who Never Contacted Astrum</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals_Who_Closed__c</fullName>
        <label>Referrals Who Closed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals_Who_Contacted_Astrum__c</fullName>
        <label>Referrals Who Contacted Astrum</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to_Us__c</fullName>
        <label>Referred to Us?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SRECS_Date_PJM_Account_Created__c</fullName>
        <label>SRECS: Date PJM Account Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRECS_Date_Registered_with_PSC__c</fullName>
        <label>SRECS: Date Registered with PSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRECS_PSC_Registration_Application_Sent__c</fullName>
        <label>SRECS: PSC Registration Application Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Complete__c</fullName>
        <label>Survey Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Post-Install Customer</label>
    <nameField>
        <label>Post-Install Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post-Install Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>